# siphon

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml  workflow.yml
libs/siphon-dsl/: README.md  pyproject.toml
libs/siphon-dsl/siphon/: __init__.py
specs/: v0.5.md
specs/history/: v0.1.md  v0.2.md  v0.3.md  v0.4.md
tests/: test_siphon.py  test_typed.py
